Add Commons Lang3 v. 3.3.2 as a dependency.

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,12 @@
 	</properties>
 	
 	<dependencies>
+		<!-- APACHE COMMONS -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.3.2</version>
+		</dependency>
 		<!-- LOGGING -->
 		<dependency>
 			<groupId>log4j</groupId>
