--- a/pom.xml
+++ b/pom.xml
@@ -29,38 +29,17 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.3.1</version>
+				<artifactId>maven-assembly-plugin</artifactId>
 				<configuration>
-					<outputDirectory>${project.build.directory}/chess-endgames</outputDirectory>
 					<archive>
 						<manifest>
-							<addClasspath>true</addClasspath>
-							<mainClass>cz.dusanrychnovsky.chessendgames.gui.GUIAdapter</mainClass>
+							<mainClass>cz.dusanrychnovsky.chessendgames.Main</mainClass>
 						</manifest>
 					</archive>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
 				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<version>2.3</version>
-				<executions>
-					<execution>
-						<id>copy-dependencies</id>
-						<phase>package</phase>
-						<goals>
-							<goal>copy-dependencies</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>${project.build.directory}/chess-endgames</outputDirectory>
-							<!-- the two lines below tell Maven not to include test scoped dependencies -->
-							<includeScope>runtime</includeScope>
-							<excludeScope>provided</excludeScope>
-						</configuration>
-					</execution>
-				</executions>
 			</plugin>
 		</plugins>
 	</build>
