--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	
 	<groupId>cz.dusanrychnovsky</groupId>
 	<artifactId>chess-endgames</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>0.1</version>
 	<packaging>jar</packaging>
 	
 	<name>chess-endgames</name>
@@ -39,7 +39,17 @@
 					<descriptorRefs>
 						<descriptorRef>jar-with-dependencies</descriptorRef>
 					</descriptorRefs>
+					<finalName>chess-endgames-release-${version}</finalName>
+					<appendAssemblyId>false</appendAssemblyId>
 				</configuration>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
