Maven - use project.version instead of version

--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
 					<descriptorRefs>
 						<descriptorRef>jar-with-dependencies</descriptorRef>
 					</descriptorRefs>
-					<finalName>chess-endgames-release-${version}</finalName>
+					<finalName>chess-endgames-release-${project.version}</finalName>
 					<appendAssemblyId>false</appendAssemblyId>
 				</configuration>
 				<executions>
