--- a/.github/workflows/verify-commit.yml
+++ b/.github/workflows/verify-commit.yml
@@ -1,4 +1,4 @@
-name: Java CI
+name: Verify Commit
 
 on: [push]
 
@@ -8,12 +8,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-
+      - uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'adopt'
-      - name: Build with Maven
-        run: mvn --batch-mode --update-snapshots verify
+      - run: mvn --batch-mode --update-snapshots verify
